# Backend/Progress.Domain/Api/Document.cs
@@ -22,5 +22,6 @@ public class Document
   public int? UserId { get; set; }
   public string UserName { get; set; } = "";
   public DateTime IssueDate { get; set; } = DateTime.Today;
+  public int StatusReal { get; set; } // 2 - zrealizowany, 5 - niezrealizowany
 
 }
